[project]
name = "generative-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "distrax>=0.1.5",
    "einops>=0.8.1",
    "flax>=0.10.6",
    "ipykernel>=6.29.5",
    "jax>=0.6.1",
    "loguru>=0.7.3",
    "marimo>=0.13.15",
    "matplotlib>=3.10.3",
    "optax>=0.2.4",
    "pandas>=2.2.3",
    "torchvision>=0.22.0",
]
